--- a/boardjpa/src/main/resources/application.properties
+++ b/boardjpa/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.properties.hibernate.highlight-sql=true
 spring.jpa.properties.hibernate.use-sql-comments=true
-# ? value view
 
-logging.level.org.hibernate.type.descriptor.sql=trace
+# ? value view
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.mandatory-file-encoding=UTF-8
 server.servlet.encoding.charset=UTF-8
