--- a/securityexam/src/main/resources/application.properties
+++ b/securityexam/src/main/resources/application.properties
@@ -33,12 +33,26 @@ spring.servlet.multipart.max-request-size= 1000MB
 #Naver
 spring.security.oauth2.client.registration.naver.client-id=XbyjZbaHaEtGuMNV2DBv
 spring.security.oauth2.client.registration.naver.client-secret=HpXJu918L6
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8090/oauth2/callback/naver
 
 #Naver Provider
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
-spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token	
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-spring.security.oauth2.client.provider.naver.user-name-attribute=response	
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+#Kakao
+spring.security.oauth2.client.registration.kakao.client-id=25026a8d2b03657741ee2c7b317c8e4d
+spring.security.oauth2.client.registration.kakao.scope=account_email
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8090/oauth2/callback/kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method="POST"
+#Kakao Provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
